[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/scoreboard/item/item.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://gameplay/mp/ui/battle_end/battle_end.gd" type="Script" id=5]

[node name="battle_end" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 600.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 34.0
margin_right = 600.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 4 )
text = "Battle Is Finish"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 98.0
margin_right = 600.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 30 )

[node name="item" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 132.0
margin_right = 600.0
margin_bottom = 212.0
mouse_filter = 2
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer2/item"]
margin_right = 20.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer2/item"]
margin_left = 24.0
margin_right = 104.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="color" type="ColorRect" parent="VBoxContainer2/item/MarginContainer"]
visible = false
margin_left = -10.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 50 )
color = Color( 0.396078, 0.396078, 0.396078, 1 )

[node name="MarginContainer2" type="CenterContainer" parent="VBoxContainer2/item"]
margin_left = 108.0
margin_right = 368.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="player_name" type="Label" parent="VBoxContainer2/item/MarginContainer2"]
margin_left = 94.0
margin_top = 26.0
margin_right = 166.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Name"

[node name="MarginContainer3" type="CenterContainer" parent="VBoxContainer2/item"]
margin_left = 372.0
margin_right = 472.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )

[node name="kill_count" type="Label" parent="VBoxContainer2/item/MarginContainer3"]
margin_left = 29.0
margin_top = 26.0
margin_right = 70.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Kill"

[node name="MarginContainer4" type="CenterContainer" parent="VBoxContainer2/item"]
margin_left = 476.0
margin_right = 576.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )

[node name="death_count" type="Label" parent="VBoxContainer2/item/MarginContainer4"]
margin_left = 12.0
margin_top = 26.0
margin_right = 87.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Death"

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer2/item"]
margin_left = 580.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="MarginContainer9" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 216.0
margin_right = 600.0
margin_bottom = 231.0
rect_min_size = Vector2( 80, 15 )

[node name="holder" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 235.0
margin_right = 600.0
margin_bottom = 836.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 840.0
margin_right = 600.0
margin_bottom = 920.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 57.0
margin_right = 77.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="rematch" type="Button" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 81.0
margin_right = 291.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer2/HBoxContainer3/rematch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer3/rematch"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Rematch"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 295.0
margin_right = 305.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="main_menu" type="Button" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 309.0
margin_right = 519.0
margin_bottom = 80.0
rect_min_size = Vector2( 210, 80 )
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer2/HBoxContainer3/main_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer3/main_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 523.0
margin_right = 543.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 924.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/rematch" to="." method="_on_rematch_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/main_menu" to="." method="_on_main_menu_pressed"]
